# expected_cost

./: README.md  avcost.py  examples_10classes.py  examples_2classes.py  requirements.txt  setup.cfg
classmetrics/: avcost.py  utils.py
data/resnet-50_cifar10/: predictions.npy  predictions_cal_10classes.npy  predictions_cal_first2classes.npy
examples/: PSRs_and_calibration.ipynb  README  ac_analysis_for_a_10class_problem.py  ac_analysis_for_a_2class_problem.py  bin_metric_comparison_from_conf_matrix.py  bin_metric_comparison_from_scores.py  data.py  ec_analysis_for_a_2class_problem.py  ec_analysis_for_a_nclass_problem.py  ec_and_calibration_analysis.py  metric_comparison_from_conf_matrix.py  metric_comparison_from_scores.py
expected_cost/: calibration.py  data.py  ec.py  psrcal_wrappers.py  utils.py
notebooks/: Metrics_over_hard_decisions.ipynb  Metrics_over_scores.ipynb  PSRs_and_calibration.ipynb  data.py
notebooks/.ipynb_checkpoints/: PSRs_and_calibration-checkpoint.ipynb
notebooks/classification_metrics_paper/: Metrics_over_hard_decisions.ipynb  Metrics_over_scores.ipynb  PSRs_and_calibration.ipynb  README
notebooks/data/: README
notebooks/evaluating_posteriors_paper/: README  appendix_B_absolute_distance_is_not_a_score_divergence.ipynb  appendix_E_confidence_intervals.ipynb  section_2.3_psrs.ipynb  section_3.1_bayes_risk_curves.ipynb  section_3.4_effect_of_reference_in_epsr_value.ipynb  section_3.5_metrics_on_real_data.ipynb  sections_3.2_3.3_metric_comparison.ipynb
notebooks/expected_cost_paper/: section_2.2_bayes_decisions.ipynb  (+4 more)
(+35 files in other folders)
