[metadata]
name = expected_cost
version = 0.0.2
author = Luciana Ferrer
author_email = lferrer@dc.uba.ar
description = Methods for computing the expected cost metric for evaluation of classification systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/luferrer/expected_cost
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = ./
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib>=3.5.2
    numpy>=1.24.1
    scipy>=1.9.1
    scikit_learn>=1.2.2

[options.packages.find]
where = ./
